html/css alterations

--- a/index.html
+++ b/index.html
@@ -15,12 +15,22 @@
       <!-- Latest compiled and minified JavaScript -->
 
 
-      <title>amusment park</title>
+      <title>amusement park</title>
     </head>
     <body>
-      <h1>asdf</h1>
-      <div class="all-rides"> <h1>thisisride</h1> </div>
-
+      <h1>Amusment Park Rides</h1>
+      <div class="all-rides big-rides">
+        <h1><span id="big-rides">death hooker big ride</span></h1>
+        <h1>bloodless murder</h1>
+        <h1>the inside outer</h1>
+        <h1>the outside inner</h1>
+       </div>
+        <div class="little-rides all-rides">
+          <h1>teacup a little ride</h1>
+          <h1>the awwwwsome ride</h1>
+          <h1>
+         </div>
+         <button class="btn btn-success" id="all-rides-highlighted">show all rides</button>
 
 
       <!-- scripts down here for proper loading -->
